--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -32,6 +32,8 @@
 
   <button onclick="fetchServerQuotes()">Sync Now</button>
 
+  <div id="syncNotice" style="display:none; background:#eef; padding:10px; margin-top:10px;"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
